Session 3 - Homework/Task4/homework3-4-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: books-routing
spec:
  hosts:
  - books
  http:
  - route:
    - destination:
        host: books
        port:
          number: 8080
        subset: books-round-robin
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authors-routing
spec:
  hosts:
  - authors
  http:
  - route:
    - destination:
        host: authors
        port:
          number: 8080
        subset: authors-random
